-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.2.1, 5.3.1
-
Fix Version/s: 5.4.0
-
Component/s: GUI: Accessibility (a11y)
-
Labels:
-
Environment:Windows
-
Commits:3066cb37a983bbe1badd28765c222e635599ff22
I'm trying to make the screen-reader tell the shortcut for a QAction object contained in a QMenu. As far as I can tell the screen reader only sees the text property of QAction and I cannot add there the string for shortcut, because it will cause duplication. I've tried setting other properties like:
QAction::toolTip
QAction::whatsThis
QAction::IconText
etc.
,but the screen-reader doesn't see any of them.