Accessibility Windows: Add shortcuts to name

Under windows it is customary to add the shortcut (e.g. Ctrl+O) to the
accessible name.

Task-number: QTBUG-38915
Change-Id: Ib79f8624346a1d9d08381e815383ddcdda2d0488
Reviewed-by: Gabriel de Dietrich <gabriel.dedietrich@digia.com>